@@ -8,6 +8,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 3.3.0.0 (not yet released)
 + patch #2794819 [navi] Filter for displayed table names,
   thanks to Michael Valushko - dylfin
+- bug #2794840 [core] Cannot redeclare pma_tableheader() 
 
 3.2.0.0 (not yet released)
 - [core] better support for vendor customisation (based on what Debian needs)
